--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         </section>
 
         <section class="stitch-distraido">
-            <img src="./imagens/stitchdistraido.png" alt="Stitch distraído">
+            <img src="./stitchdistraido.png" alt="Stitch distraído">
         </section>
 
         <section class="stitch-canto-inferior">
-            <img src="./imagens/stitchnão.gif
-            " alt="stitchnão">
+            <img src="./stitchnão.gif" alt="stitchnão">
         </section>
     </main>
 </body>
